--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=Nadeuri
+spring.datasource.url = jdbc:mysql://localhost:3306/nadeuridb
+spring.datasource.username=root
+spring.datasource.password=2727
+
+logging.level.org.springframework.security.web=TRACE
