--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,10 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,gradle
+
+### application.properties파일
+/src/main/resources/application.properties
+
+/db
+docker-compose.yml
+.idea
