--- a/build.gradle
+++ b/build.gradle
@@ -26,17 +26,26 @@ repositories {
 
 dependencies {
 	implementation 'net.coobird:thumbnailator:0.4.20'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.2'
+	implementation 'mysql:mysql-connector-java:8.0.33'
+	implementation 'com.zaxxer:HikariCP:5.1.0'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
+
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+
+
+
 	compileOnly 'org.projectlombok:lombok'
-
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-
-	runtimeOnly 'com.mysql:mysql-connector-j'
-
 	annotationProcessor (
 			'jakarta.persistence:jakarta.persistence-api',
 			'jakarta.annotation:jakarta.annotation-api',
@@ -44,8 +53,10 @@ dependencies {
 			'org.projectlombok:lombok'
 	)
 
-	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
 
 }
 
