--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.6'
 	id 'org.jetbrains.kotlin.jvm'
 	id 'org.jetbrains.kotlin.plugin.spring' version '1.8.10' // all-open, no-arg 플러그인
+	id "org.jetbrains.kotlin.plugin.jpa" version "1.9.25"
 }
 
 group = 'com.example'
@@ -30,6 +31,7 @@ dependencies {
 	// 코틀린 표준 라이브러리 추가
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 	implementation "org.jetbrains.kotlin:kotlin-reflect"
+
 
 	//모델 맵퍼
 	implementation "org.modelmapper:modelmapper:2.4.4"
